Fixed compiler error